--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 <body>
     
     <header>
-        <h1>Luke's TODO List</h1>
+        <h1>Luke's To Do List</h1>
     </header>
     <form>
         <input type="text" class="todo-input">
         <button class="todo-button" type="submit">
             <i class="fas fa-plus-square"></i>
         </button>
+        <div class="select">
+            <select name="todos" class="filter-todo">
+                <option value="all">All</option>
+                <option value="completed">Completed</option>
+                <option value="uncompleted">Uncompleted</option>
+            </select>
+        </div>
     </form>
     <div class="todo-container">
-        <ul class="todo-list"> 
-            
-        </ul>
+        <ul class="todo-list"></ul>
     </div>
-
     <script src="./app.js"></script>
 </body>
 </html>
